--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build -r https://github.com/Allexandar93/allexandar93.github.io",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
